--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Lint with flake8
         run: |
           pip install flake8
-          flake8 . --ignore=E501
+          flake8 . --ignore=E501,F401
 
       - name: Build Docker image
         run: docker build -t bloggervikash/workerlly:latest .
